--- a/capstone_analysis.ipynb
+++ b/capstone_analysis.ipynb
@@ -4719,7 +4719,7 @@
    "id": "1c2e59d2",
    "metadata": {},
    "source": [
-    "### Statistical testing\n",
+    "### Statistical testing: Chi Square\n",
     "\n",
     "Since we have a categorical (interval) DV: `visit_frequency`and a categorical IV: `physical_health_improvements` or `mental_health_improvements`, we can't run logistic or binomial regression.\n",
     "\n",
